samples/_failures_safe/1761355120_1221d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74a87541.c: In function ‘main’:
./samples/SAFE/__tmp_74a87541.c:173:5: error: expected declaration or statement at end of input
  173 |     process_tokens(tokens, token_count);
      |     ^~~~~~~~~~~~~~
